--- a/packages/amplication-kafka/package.json
+++ b/packages/amplication-kafka/package.json
@@ -2,7 +2,7 @@
   "name": "@amplication/kafka",
   "version": "0.16.1",
   "description": "",
-  "main": "./lib/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "build": "tsc",
     "prebuild": "rimraf lib",
