--- a/package.json
+++ b/package.json
@@ -68,10 +68,12 @@
     "capital-case": "1.0.4",
     "classnames": "2.3.1",
     "cli-ux": "5.5.1",
+    "core-js": "^3.6.5",
     "cron": "1.8.2",
     "cronstrue": "1.122.0",
     "cuid": "2.1.8",
     "date-fns": "2.22.1",
+    "deepdash": "^5.3.9",
     "deepdash-es": "5.3.9",
     "dir-compare": "4.0.0",
     "dockerode": "3.2.1",
@@ -124,6 +126,7 @@
     "react-use-localstorage": "3.5.3",
     "react-xarrows": "1.7.1",
     "recast": "0.20.5",
+    "regenerator-runtime": "0.13.7",
     "replace-ext": "2.0.0",
     "rxjs": "7.4.0",
     "semver": "7.3.5",
@@ -146,6 +149,10 @@
   "devDependencies": {
     "@apollo/client": "3.6.9",
     "@babel/core": "7.18.10",
+    "@babel/plugin-syntax-flow": "^7.18.6",
+    "@babel/preset-env": "^7.19.0",
+    "@babel/preset-flow": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@graphql-codegen/cli": "2.6.3",
     "@graphql-codegen/typescript": "2.4.1",
     "@material-ui/core": "^4.12.1",
@@ -162,6 +169,7 @@
     "@nestjs/swagger": "5.1.5",
     "@nestjs/testing": "8.2.3",
     "@nrwl/angular": "^14.6.5",
+    "@nrwl/cypress": "14.7.3",
     "@nrwl/devkit": "^14.6.5",
     "@nrwl/eslint-plugin-nx": "14.6.5",
     "@nrwl/jest": "14.6.5",
@@ -169,6 +177,8 @@
     "@nrwl/linter": "14.6.5",
     "@nrwl/nest": "^14.7.3",
     "@nrwl/node": "^14.6.5",
+    "@nrwl/react": "^14.7.3",
+    "@nrwl/web": "^14.7.3",
     "@oclif/dev-cli": "1.26.10",
     "@prisma/client": "3.15.2",
     "@storybook/addon-actions": "6.4.22",
@@ -180,6 +190,8 @@
     "@storybook/preset-scss": "1.0.3",
     "@storybook/react": "6.5.10",
     "@storybook/testing-library": "0.0.13",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.249",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "11.2.7",
     "@testing-library/react-hooks": "^7.0.2",
@@ -234,13 +246,16 @@
     "apollo-server-express": "3.6.1",
     "apollo-server-testing": "2.16.1",
     "babel-eslint": "10.1.0",
+    "babel-jest": "28.1.1",
     "babel-loader": "8.2.5",
+    "babel-plugin-file-loader": "^2.0.0",
     "base-64": "1.0.0",
     "bcrypt": "5.0.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "cross-fetch": "3.1.5",
     "css-loader": "6.7.1",
+    "cypress": "^10.7.0",
     "docker-compose": "0.23.17",
     "eslint": "7.23.0",
     "eslint-config-oclif": "3.1.0",
@@ -248,6 +263,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "7.0.0",
     "eslint-import-resolver-lerna": "2.0.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-flowtype": "5.8.0",
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-jest": "24.3.6",
@@ -258,6 +274,7 @@
     "eslint-plugin-testing-library": "3.10.2",
     "express": "4.17.1",
     "fast-glob": "3.2.10",
+    "file-loader": "^6.2.0",
     "formik": "2.2.9",
     "fs-extra": "^10.1.0",
     "get-port": "5.1.1",
@@ -284,6 +301,7 @@
     "react-app-rewired": "2.1.8",
     "react-is": "16.13.1",
     "react-scripts": "5.0.0",
+    "react-test-renderer": "18.2.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rollup": "2.63.0",
@@ -296,6 +314,7 @@
     "source-map-support": "^0.5.20",
     "style-loader": "3.3.1",
     "supertest": "4.0.2",
+    "swc-loader": "^0.2.3",
     "ts-jest": "27.0.3",
     "ts-loader": "6.2.2",
     "ts-node": "9.1.1",
