--- a/packages/amplication-client/tsconfig.spec.json
+++ b/packages/amplication-client/tsconfig.spec.json
@@ -16,5 +16,9 @@
     "**/*.test.jsx",
     "**/*.spec.jsx",
     "**/*.d.ts"
+  ],
+  "files": [
+    "../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
+    "../../node_modules/@nrwl/react/typings/image.d.ts"
   ]
 }
