--- a/packages/amplication-client/project.json
+++ b/packages/amplication-client/project.json
@@ -1,53 +1,83 @@
 {
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/amplication-client/src",
-  "projectType": "library",
+  "projectType": "application",
   "targets": {
     "build": {
-      "executor": "@nrwl/js:tsc",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "executor": "@nrwl/web:webpack",
+      "outputs": ["{options.outputPath}"],
+      "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/packages/@amplication/client",
-        "tsConfig": "packages/amplication-client/tsconfig.lib.json",
-        "packageJson": "packages/amplication-client/package.json",
-        "main": "packages/amplication-client/src/index.ts",
+        "compiler": "swc",
+        "outputPath": "dist/packages/amplication-client",
+        "index": "packages/amplication-client/src/index.html",
+        "baseHref": "/",
+        "main": "packages/amplication-client/src/main.tsx",
+        "polyfills": "packages/amplication-client/src/polyfills.ts",
+        "tsConfig": "packages/amplication-client/tsconfig.app.json",
         "assets": [
-          "packages/amplication-client/*.md"
-        ]
+          "packages/amplication-client/src/favicon.ico",
+          "packages/amplication-client/src/assets"
+        ],
+        "styles": ["packages/amplication-client/src/styles.scss"],
+        "scripts": [],
+        "webpackConfig": "@nrwl/react/plugins/webpack"
       },
-      "dependsOn": [
-        {
-          "target": "build",
-          "projects": "dependencies"
+      "configurations": {
+        "development": {
+          "extractLicenses": false,
+          "optimization": false,
+          "sourceMap": true,
+          "vendorChunk": true
+        },
+        "production": {
+          "fileReplacements": [
+            {
+              "replace": "packages/amplication-client/src/environments/environment.ts",
+              "with": "packages/amplication-client/src/environments/environment.prod.ts"
+            }
+          ],
+          "optimization": true,
+          "outputHashing": "all",
+          "sourceMap": false,
+          "namedChunks": false,
+          "extractLicenses": true,
+          "vendorChunk": false
         }
-      ]
+      }
+    },
+    "serve": {
+      "executor": "@nrwl/web:dev-server",
+      "defaultConfiguration": "development",
+      "options": {
+        "buildTarget": "amplication-client:build",
+        "hmr": true
+      },
+      "configurations": {
+        "development": {
+          "buildTarget": "amplication-client:build:development"
+        },
+        "production": {
+          "buildTarget": "amplication-client:build:production",
+          "hmr": false
+        }
+      }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "packages/amplication-client/**/*.ts"
-        ]
+        "lintFilePatterns": ["packages/amplication-client/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/packages/amplication-client"
-      ],
+      "outputs": ["coverage/packages/amplication-client"],
       "options": {
         "jestConfig": "packages/amplication-client/jest.config.ts",
         "passWithNoTests": true
       }
     }
   },
-  "tags": [],
-  "implicitDependencies": [
-    "amplication-design-system"
-  ]
+  "tags": []
 }
