--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -9,7 +9,7 @@ POSTGRESQL_USER=admin
 POSTGRESQL_PASSWORD=admin
 SERVICE_DB_NAME=amplication-server
 
-# Nest 
+# Nest
 CORS_ENABLE=1
 PORT=3000
 HOST=http://localhost:3000
@@ -46,6 +46,6 @@ GITHUB_APP_PRIVATE_KEY=[github-app-private-key]
 GITHUB_APP_INSTALLATION_URL=[github-app-installation-url]
 
 # Kafka
-KAFKA_BROKERS="["localhost:9092"]"
+KAFKA_BROKERS="["10.64.1.192:9092"]"
 KAFKA_CLIENT_ID='server-queue-client'
 KAFKA_GROUP_ID='main-server-group'
