--- a/packages/amplication-server/tsconfig.lib.json
+++ b/packages/amplication-server/tsconfig.lib.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "outDir": "../../dist/out-tsc",
     "declaration": true,
+    "target": "ES2020",
     "types": ["node"],
 	"noImplicitAny": false,
 	"allowSyntheticDefaultImports": true,
