--- a/packages/amplication-client/package.json
+++ b/packages/amplication-client/package.json
@@ -28,6 +28,8 @@
     "react-compound-timer": "1.2.0",
     "react-device-detect": "1.17.0",
     "react-diff-viewer": "3.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "16.14.0",
     "react-draggable": "4.4.3",
     "react-dropzone": "11.3.4",
