--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -46,6 +46,7 @@
     "@nestjs/core": "8.2.3",
     "@nestjs/graphql": "9.1.2",
     "@nestjs/jwt": "8.0.0",
+    "@nestjs/microservices": "8.4.7",
     "@nestjs/passport": "8.2.2",
     "@nestjs/platform-express": "8.2.3",
     "@nestjs/serve-static": "2.2.2",
