--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,11 @@ on:
       - "**.md"
       - "renovate.json"
       - ".all-contributorsrc"
-  pull_request_target:
-    branches: ["master", "release/*", "dependabot"]
+  pull_request:
+    branches: ["master", "release/*"]
     types: [opened, reopened]
     paths-ignore:
       - "**.md"
-      - "renovate.json"
       - ".all-contributorsrc"
 
 jobs:
