--- a/packages/amplication-code-gen-types/package.json
+++ b/packages/amplication-code-gen-types/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "@nestjs/core": "^9.0.9",
     "ast-types": "^0.14.2",
+    "json-schema": "0.4.0",
     "lodash": "^4.17.21"
   }
 }
