--- a/packages/amplication-code-gen-types/package.json
+++ b/packages/amplication-code-gen-types/package.json
@@ -30,6 +30,7 @@
     "rimraf": "3.0.2",
     "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
+    "type-fest": "0.15.1",
     "typescript": "4.0.2"
   },
   "jest": {
