--- a/packages/amplication-git-pull-request-service/.env
+++ b/packages/amplication-git-pull-request-service/.env
@@ -4,5 +4,5 @@ GENERATE_PULL_REQUEST_TOPIC="git.internal.pull-request.request.1"
 KAFKA_CLIENT_ID="git-pull-request"
 KAFKA_GROUP_ID="amplication-git-pull-request-service"
 
-# # GitHub:
+# GitHub:
 # GITHUB_APP_APP_ID=[github-app-app-id]
