--- a/packages/amplication-git-pull-request-service/.env
+++ b/packages/amplication-git-pull-request-service/.env
@@ -5,4 +5,4 @@ KAFKA_CLIENT_ID="git-pull-request"
 KAFKA_GROUP_ID="amplication-git-pull-request-service"
 
 # GitHub:
-# GITHUB_APP_APP_ID=[github-app-app-id]
+GITHUB_APP_APP_ID=[github-app-app-id]
