--- a/packages/amplication-kafka/package.json
+++ b/packages/amplication-kafka/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@nestjs/common": "8.4.4",
+    "@nestjs/config": "2.2.0",
     "@nestjs/core": "8.4.4",
     "@nestjs/microservices": "8.4.3",
     "@types/error-cause": "1.0.1",
