--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,9 @@
 {
   "cSpell.words": [
-    "amplicationignore",
     "Amplication",
+    "amplicationignore",
     "Authorizable",
-    "Datagrid",
     "automerge",
-    "Dropzone",
-    "Formik",
-    "IBLOCK",
-    "Octokit",
-    "Queryable",
-    "Repos",
-    "SENDGRID",
-    "Signup",
-    "UNREQUIRED",
-    "Xarrow",
     "camelcase",
     "checkmark",
     "clonedeep",
@@ -46,6 +35,7 @@
     "postpack",
     "posttest",
     "prebuild",
+    "Promisable",
     "QLJSON",
     "Queryable",
     "Repos",
