fix server replicas for prod

--- a/helm/charts/amplication/values-prod.yaml
+++ b/helm/charts/amplication/values-prod.yaml
@@ -28,6 +28,9 @@ amplication-client:
       REACT_APP_STORAGE_GATEWAY_URL: https://server.amplication.com
 
 amplication-server:
+  autoscaling:
+    minReplicas: 12
+  replicaCount: 12
   resources:
     limits:
       cpu: 3
