--- a/helm/charts/amplication/values-staging.yaml
+++ b/helm/charts/amplication/values-staging.yaml
@@ -26,6 +26,9 @@ amplication-client:
       REACT_APP_STORAGE_GATEWAY_URL: https://server.staging.amplication-dev.com
 
 amplication-server:
+  autoscaling:
+    minReplicas: 12
+  replicaCount: 12
   ingress:
     hostname: server.staging.amplication-dev.com
   config:
