Revert "Fix typo"
This reverts commit 08d6d91fd22594fa77e0f4a338798e053b452179.

--- a/helm/charts/services/amplication-server/values.yaml
+++ b/helm/charts/services/amplication-server/values.yaml
@@ -33,7 +33,7 @@ secrets:
 podAnnotations:
   cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
 
-maxMemory: "1.6i"
-minMemory: "1.0Gi"
+maxMemory: "1Gi"
+minMemory: "1.6Gi"
 maxCPU: "0.9"
 minCPU: "0.6"
