--- a/helm/charts/services/amplication-server/values.yaml
+++ b/helm/charts/services/amplication-server/values.yaml
@@ -2,8 +2,8 @@ name: amplication-server
 
 autoscaling:
   enabled: true
-  minReplicas: 20
-  maxReplicas: 100
+  minReplicas: 5
+  maxReplicas: 5a
   targetCPUUtilizationPercentage: 60
   targetMemoryUtilizationPercentage: 60
 replicaCount: 2
