--- a/helm/charts/services/amplication-server/values.yaml
+++ b/helm/charts/services/amplication-server/values.yaml
@@ -3,7 +3,7 @@ name: amplication-server
 autoscaling:
   enabled: true
   minReplicas: 5
-  maxReplicas: 5a
+  maxReplicas: 5
   targetCPUUtilizationPercentage: 60
   targetMemoryUtilizationPercentage: 60
 replicaCount: 2
