fix auto scaler max replica

--- a/helm/charts/amplication/values-prod.yaml
+++ b/helm/charts/amplication/values-prod.yaml
@@ -30,6 +30,7 @@ amplication-client:
 amplication-server:
   autoscaling:
     minReplicas: 20
+    maxReplicas: 30
   replicaCount: 20
   resources:
     limits:
