--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -33,6 +33,7 @@ CONTAINER_BUILDER_DEFAULT=docker
 
 # Kafka Topics
 GENERATE_PULL_REQUEST_TOPIC="git.internal.pull-request.request.1"
+CREATE_PULL_REQUEST_COMPLETED_TOPIC="git.internal.pull-request.completed.1"
 CHECK_USER_ACCESS_TOPIC="auth.user.access"
 
 COMPOSE_PROJECT_NAME=amplication-server
