--- a/packages/amplication-git-pull-request-service/.env
+++ b/packages/amplication-git-pull-request-service/.env
@@ -1,8 +1,10 @@
 # Kafka
 KAFKA_BROKERS='["localhost:9092"]'
-GENERATE_PULL_REQUEST_TOPIC="git.internal.pull-request.request.1"
 KAFKA_CLIENT_ID="git-pull-request"
 KAFKA_GROUP_ID="amplication-git-pull-request-service"
+
+TOPIC_COMMIT_INITIATED: "git.internal.commit-initiated.request.0"
+TOPIC_COMMIT_STATE: "git.internal.commit-state.request.0"
 
 # GitHub:
 GITHUB_APP_APP_ID=[github-app-app-id]
