--- a/.github/workflows/deploy-to-next.yml
+++ b/.github/workflows/deploy-to-next.yml
@@ -148,7 +148,7 @@ jobs:
         id: deploy-app-dsg
         working-directory: ./helm/charts/dsg-runner-infra
         run: |
-          helm upgrade -i dsg-runner-infra . --namespace $TARGET_ENV-dsg --create-namespace
+          helm upgrade -i dsg-runner-infra . --namespace $TARGET_ENV-dsg --create-namespace -f values/$TARGET_ENV.yaml
         env:
           TARGET_ENV: next
       - name: deploy app
