--- a/helm/charts/dsg-runner-infra/templates/eventbus.yaml
+++ b/helm/charts/dsg-runner-infra/templates/eventbus.yaml
@@ -4,4 +4,6 @@ metadata:
   name: default
 spec:
   nats:
-    native: {}
+    native:
+      replicas: 3 # minimal requirement is 3
+      auth: token
