--- a/helm/charts/amplication/values-staging.yaml
+++ b/helm/charts/amplication/values-staging.yaml
@@ -28,6 +28,7 @@ amplication-client:
 amplication-server:
   autoscaling:
     minReplicas: 12
+    maxReplicas: 99
   replicaCount: 12
   ingress:
     hostname: server.staging.amplication-dev.com
