update storage service health controller to check filesystem connection and kafka connection. and add liveliness and readiness to helm deployment template and to storage service values file

--- a/helm/charts/services/amplication-storage-gateway/values.yaml
+++ b/helm/charts/services/amplication-storage-gateway/values.yaml
@@ -35,3 +35,12 @@ ingress:
   enabled: true
   hostname: server.amplication.com
   path: /storage
+
+
+healthCheck:
+  readiness:
+    path: /_health/ready
+    port: 3002
+  liveness:
+    path: /_health/live
+    port: 3002
