--- a/packages/amplication-storage-gateway/package.json
+++ b/packages/amplication-storage-gateway/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@amplication/kafka": "^1.0.1",
+    "@amplication/nest-logger-module": "^1.0.1",
     "@nestjs/common": "8.4.4",
     "@nestjs/config": "1.1.5",
     "@nestjs/core": "8.2.3",
