feat(dsg): add parser option for static and templates

--- a/packages/amplication-data-service-generator/tsconfig.json
+++ b/packages/amplication-data-service-generator/tsconfig.json
@@ -18,5 +18,5 @@
     "jsx": "react"
   },
   "include": ["src"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/**.template.ts", "**/static/**/**"]
 }
