--- a/helm/charts/dsg-runner-infra/templates/sensor.yaml
+++ b/helm/charts/dsg-runner-infra/templates/sensor.yaml
@@ -31,17 +31,22 @@ spec:
                     restartPolicy: Never
                     containers:
                       - name: dsg-container
-                        image: "407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-data-service-generator:0.0.7"
-                        command: ["npm", "run", "generate-code", "--", "/efs/dsg-jobs/${BUILD_ID}/spec.json", "/efs/dsg-jobs/${BUILD_ID}/output"]
+                        image: "407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-data-service-generator:0.0.10"
+                         command: ["sh", "-c"]
+                        args: [ "cd /app/packages/amplication-data-service-generator; npm run generate-code -- /efs/dsg-jobs/$(BUILD_ID)/input.json /efs/dsg-jobs/$(BUILD_ID)/output"]
                         env:
                           - name: BUILD_ID
                             value: null # provided in parameters
                           - name: STATUS_UPDATE_URL
-                            value: https://2a08-77-252-192-146.eu.ngrok.io/generated-apps/update-action-step-status
+                            value: amplication-server.next.svc.cluster.local/generated-apps/complete-code-generation-step
+                        volumeMounts:
+                          - name: persistent-storage
+                            mountPath: /efs
+                            # subPath: null
                     volumes:
                       - name: persistent-storage
                         persistentVolumeClaim:
-                          claimName: efs-claim-{{ .Values.envName}}-dsg
+                          claimName: efs-claim-{{ .Values.envName }}-dsg
                 ttlSecondsAfterFinished: {{ .Values.job.ttlSecondsAfterFinished }}
                 backoffLimit: 0
           parameters:
@@ -49,11 +54,11 @@ spec:
                 dependencyName: test-dep
                 dataKey: body.buildId
               dest: spec.template.spec.containers.0.env.0.value
-            - src:
-                dependencyName: webhook
-                dataTemplate: "/efs/dsg-jobs/{{`{{ .Input.body.buildId }}`}}" # need to escape this due to helm chart
-              dest: spec.template.spec.containers.0.volumeMounts.0.mountPath
-            - src:
-                dependencyName: webhook
-                dataTemplate: "dsg-jobs/{{`{{ .Input.body.buildId }}`}}" # need to esacpe this due to helm chart
-              dest: spec.template.spec.containers.0.volumeMounts.0.subPath
+            # - src:
+            #     dependencyName: webhook
+            #     dataTemplate: "/efs/dsg-jobs/{{`{{ .Input.body.buildId }}`}}" # need to escape this due to helm chart
+            #   dest: spec.template.spec.containers.0.volumeMounts.0.mountPath
+            # - src:
+            #     dependencyName: webhook
+            #     dataTemplate: "dsg-jobs/{{`{{ .Input.body.buildId }}`}}" # need to esacpe this due to helm chart
+            #   dest: spec.template.spec.containers.0.volumeMounts.0.subPath
