Install DSG plugins on-demand

--- a/packages/amplication-data-service-generator/Dockerfile
+++ b/packages/amplication-data-service-generator/Dockerfile
@@ -1,7 +1,7 @@
 ARG ALPINE_VERSION=alpine3.14
-ARG NODE_VERSION=16.13.1
+ARG NODE_VERSION=16.13
 
-FROM node:$NODE_VERSION-$ALPINE_VERSION AS base
+FROM node:$NODE_VERSION AS base
 COPY ./ /app
 
 WORKDIR /app
@@ -12,14 +12,12 @@ RUN npm run bootstrap -- --scope @amplication/data-service-generator --include-d
 
 RUN npm run build -- --scope @amplication/data-service-generator --include-dependencies
 
-
 FROM node:$NODE_VERSION-$ALPINE_VERSION as final
 WORKDIR /app
 
 COPY --from=base /app/packages/amplication-data-service-generator/package.json /app/packages/amplication-data-service-generator/package.json
 COPY --from=base /app/packages/amplication-data-service-generator/node_modules /app/packages/amplication-data-service-generator/node_modules
 COPY --from=base /app/packages/amplication-data-service-generator/dist /app/packages/amplication-data-service-generator/dist
-
 
 COPY --from=base /app/packages/amplication-code-gen-types/package.json /app/packages/amplication-code-gen-types/package.json
 COPY --from=base /app/packages/amplication-code-gen-types/node_modules /app/packages/amplication-code-gen-types/node_modules
