--- a/nx.json
+++ b/nx.json
@@ -1,73 +1,39 @@
 {
   "extends": "nx/presets/npm.json",
+  "npmScope": "amplication",
+  "affected": {
+    "defaultBase": "master"
+  },
+  "implicitDependencies": {
+    "package.json": {
+      "dependencies": "*",
+      "devDependencies": "*"
+    },
+    ".eslintrc.json": "*"
+  },
   "tasksRunnerOptions": {
     "default": {
       "runner": "nx/tasks-runners/default",
       "options": {
         "cacheableOperations": [
           "build",
-          "posttest",
-          "prepare",
+          "preapre",
           "check-format",
-          "format",
           "test",
-          "seed",
-          "migrate:save",
-          "migrate:up",
-          "db:migrate-save",
-          "db:migrate-up",
-          "db:clean",
           "db:init",
-          "prisma:generate",
-          "prisma:studio",
-          "docker:db",
-          "docker:build",
-          "prebuild",
           "lint",
-          "docker",
-          "docker:down",
-          "postpack",
-          "prepack-manual",
-          "eject",
-          "lint:fix",
-          "build:compile",
-          "build:generate-types",
-          "compose:up",
-          "compose:down",
-          "build:copy-files",
-          "build:update-version",
-          "test:watch",
           "test:e2e",
-          "generate-test-data-service",
-          "update-test-data-service-snapshot",
-          "watch",
-          "storybook",
-          "build-storybook",
-          "test:cov",
-          "postinstall",
-          "test:debug",
-          "migrate:rollback",
-          "prisma:generate:watch",
-          "build:generate-help",
-          "generate-graphql-schema",
-          "check-graphql-schema"
+          "test:cov"
         ]
       }
     }
   },
   "targetDefaults": {
     "build": {
-      "dependsOn": [
-        "^build"
-      ]
+      "dependsOn": ["^build"]
     },
     "prepare": {
-      "dependsOn": [
-        "^prepare"
-      ]
+      "dependsOn": ["^prepare"]
     }
-  },
-  "affected": {
-    "defaultBase": "master"
   }
 }
