--- a/package.json
+++ b/package.json
@@ -23,22 +23,30 @@
     "docker:dev": "docker-compose -f docker-compose.dev.yml up -d"
   },
   "dependencies": {
+    "@nestjs/common": "^8.4.7",
+    "@nestjs/core": "^8.4.7",
+    "@nestjs/microservices": "^8.4.7",
+    "dotenv": "^16.0.0",
     "lerna": "5.5.2",
     "ora": "5.4.0",
     "react-query": "^3.39.1",
+    "reflect-metadata": "^0.1.13",
     "semver": "7.3.5",
     "winston": "3.3.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.3",
     "@graphql-codegen/typescript": "2.4.1",
-    "@types/jest": "27.0.2",
-    "@types/semver": "7.3.9",
-    "graphql": "15.3.0",
-    "npm-run-all": "4.1.5",
-    "nx": "14.7.17",
-    "prettier": "2.0.5",
-    "ts-jest": "27.0.5"
+    "@nrwl/nest": "^14.8.2",
+    "@nrwl/node": "^14.8.2",
+    "@nrwl/workspace": "^14.8.2",
+    "@types/jest": "^27.0.2",
+    "@types/semver": "^7.3.9",
+    "graphql": "^15.3.0",
+    "npm-run-all": "^4.1.5",
+    "nx": "^14.8.2",
+    "prettier": "^2.6.2",
+    "ts-jest": "^27.0.5"
   },
   "engines": {
     "node": "^16.3.0 || ^14.0.0",
