Copy static assets from site repo #3963     Fix Generate App script to copy assets #4040     Update Login Screen     Update snapshots     Update manifest json     Closes #3963     Closes #4040

--- a/packages/amplication-data-service-generator/src/admin/public-files/manifest.json
+++ b/packages/amplication-data-service-generator/src/admin/public-files/manifest.json
@@ -16,6 +16,21 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "graphql.png",
+      "type": "image/png",
+      "sizes": "48x48"
+    },
+    {
+      "src": "react-admin.png",
+      "type": "image/png",
+      "sizes": "48x48"
+    },
+    {
+      "src": "restapi.png",
+      "type": "image/png",
+      "sizes": "48x48"
     }
   ],
   "start_url": ".",
