change kafka brokers env to string

--- a/helm/charts/amplication/values-common.yaml
+++ b/helm/charts/amplication/values-common.yaml
@@ -110,7 +110,7 @@ amplication-server:
       HOST: "https://server.staging.amplication-dev.com"
       CLIENT_HOST: "https://app-dev.staging.amplication-dev.com"
 
-      KAFKA_BROKERS: '["amplication-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: "amplication-cp-kafka-headless:9092"
       KAFKA_CLIENT_ID: amplication-server
       KAFKA_GROUP_ID: amplication-server
 
@@ -150,7 +150,7 @@ amplication-git-push-webhook-service:
     hostname: webhook.staging.amplication-dev.com
   config:
     env:
-      KAFKA_BROKERS: '["amplication-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: "amplication-cp-kafka-headless:9092"
       KAFKA_CLIENT_ID: git-push-webhook
       KAFKA_GROUP_ID: amplication-git-push-webhook-service
       PORT: "3000"
@@ -173,7 +173,7 @@ amplication-git-pull-service:
       GIT_DEFAULT_ORIGIN_NAME: origin
       GITHUB_APP_PRIVATE_KEY: ""
 
-      KAFKA_BROKERS: '["amplication-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: "amplication-cp-kafka-headless:9092"
       KAFKA_CLIENT_ID: git-pull
       KAFKA_GROUP_ID: amplication-git-pull-service
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
@@ -183,7 +183,7 @@ amplication-git-pull-request-service:
     repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-git-pull-request-service
   config:
     env:
-      KAFKA_BROKERS: '["amplication-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: "amplication-cp-kafka-headless:9092"
       KAFKA_CLIENT_ID: git-pull-request
       KAFKA_GROUP_ID: amplication-git-pull-request-service
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.1
@@ -199,7 +199,7 @@ amplication-storage-gateway:
     env:
       PORT: "3002"
       CORS_ENABLE: "1"
-      KAFKA_BROKERS: '["amplication-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: "amplication-cp-kafka-headless:9092"
       KAFKA_CLIENT_ID: storage-queue-client
       KAFKA_GROUP_ID: storage-server-group
       CHECK_USER_ACCESS_TOPIC: authorization.internal.can-access-build.request.0
