--- a/helm/charts/dsg-runner-infra/values/next.yaml
+++ b/helm/charts/dsg-runner-infra/values/next.yaml
@@ -2,3 +2,6 @@ envName: "next"
 
 persistentVolume:
   volumeHandle: fs-0a87872138ddc7f6d::fsap-0e0ed55af55fbdf11
+
+job:
+  ttlSecondsAfterFinished: 25200
