--- a/package.json
+++ b/package.json
@@ -24,29 +24,60 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.4.7",
+    "@nestjs/config": "^1.2.1",
     "@nestjs/core": "^8.4.7",
     "@nestjs/microservices": "^8.4.7",
+    "@nestjs/platform-express": "^8.4.7",
+    "@nestjs/serve-static": "^2.2.2",
+    "@prisma/client": "^3.15.2",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.0",
+    "fs-extra": "^9.1.0",
+    "kafkajs": "^1.16.0",
     "lerna": "5.5.2",
+    "nest-access-control": "^2.2.0",
+    "nest-morgan": "^1.0.1",
+    "nest-winston": "^1.7.0",
+    "nestjs-prisma": "^0.16.0",
+    "octokit": "^1.8.1",
     "ora": "5.4.0",
     "react-query": "^3.39.1",
     "reflect-metadata": "^0.1.13",
-    "semver": "7.3.5",
-    "winston": "3.3.4"
+    "simple-git": "^3.14.1",
+    "ts-node": "~10.8.0",
+    "winston": "3.3.4",
+    "winston-cloud-logging": "^1.0.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.3",
     "@graphql-codegen/typescript": "2.4.1",
+    "@nestjs/cli": "^8.2.8",
+    "@nestjs/testing": "^8.4.7",
     "@nrwl/nest": "^14.8.2",
     "@nrwl/node": "^14.8.2",
     "@nrwl/workspace": "^14.8.2",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.14",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.2",
+    "@types/node": "^18.7.23",
+    "@types/normalize-path": "^3.0.0",
     "@types/semver": "^7.3.9",
+    "@types/supertest": "^2.0.12",
     "graphql": "^15.3.0",
+    "jest": "^27.5.1",
+    "jest-mock-extended": "^2.0.9",
     "npm-run-all": "^4.1.5",
     "nx": "^14.8.2",
-    "prettier": "^2.6.2",
-    "ts-jest": "^27.0.5"
+    "prettier": "^2.7.1",
+    "prisma": "^3.15.2",
+    "semver": "^7.3.7",
+    "supertest": "^4.0.2",
+    "ts-jest": "27.1.4",
+    "type-fest": "^0.11.0",
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": "^16.3.0 || ^14.0.0",
